# paralle-parking-roboracer

./: .gitignore  .gitmodules  Dockerfile  README.md  brpp.bash  reference_codes  run_cmd.txt  run_docker.sh  try.py  waypoints.csv  waypoints.txt  world_waypoints.csv
maps/agh/: agh300a1.pgm  agh300a1.yaml  agh300a1_blacked.pgm  agh300a1_smoothed.pgm  agh300a2.pgm  agh300a2.yaml
maps/levine/: parapark_gap1.pgm  parapark_gap1.yaml  parapark_gap2.pgm  parapark_gap2.yaml  parapark_levine1.pgm  parapark_levine1.yaml  parapark_levine2.pgm  parapark_levine2.yaml  parapark_levine2_blacked.pgm  parapark_levine3.pgm  parapark_levine3.yaml
src/: waypoints.txt
src/mppi/: CMakeLists.txt  config.yaml  config_map_edited.yaml  config_new_map.yaml  config_park.yaml  config_park_agh.yaml  config_park_slot1.yaml  infer_env.py  mppi_node.py  mppi_tracking.py  package.xml  setup.py  vis_node.py
src/mppi/dynamics_models/: dynamics_models_jax.py
src/mppi/utils/: Track.py  utils.py
src/mppi/waypoints/map_edited/: map_edited_smoothed.csv  map_edited_smoothed_offset1.csv
src/mppi/waypoints/new_map/: new_map_manual.csv
src/parallel-parking/: CMakeLists.txt  package.xml
src/parallel_parking/: CMakeLists.txt  package.xml
src/parallel_parking/config/: grid_waypoints.csv  old  parapark_levine2_loc1.csv  parapark_levine2_loc2.csv  parapark_levine2_loc3.csv  parapark_levine2_loc4.csv  waypoints_agh300a_bf.csv  waypoints_agh300a_fb.csv  waypoints_forward_1.csv  waypoints_manual.csv  waypoints_park0.9.csv  waypoints_park1.csv  waypoints_park2.csv  world_waypoints.csv
src/parallel_parking/launch/: parallel_parking.launch.py  (+2 more)
src/parallel_parking_interfaces/: CMakeLists.txt  package.xml
(+17 files in other folders)
